--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -21,6 +21,14 @@ msgstr "Montant hors Commissions"
 msgctxt "field:account.move,wo_tax_amount:"
 msgid "Total Amount w/o taxes"
 msgstr "Montant total hors Taxes"
+
+msgctxt "field:account.move.breakdown,commissions:"
+msgid "Commissions"
+msgstr "Commissions"
+
+msgctxt "field:account.move.breakdown,total_base_com:"
+msgid "Total with coms"
+msgstr "Total avec coms"
 
 msgctxt "field:broker,create_date:"
 msgid "Create Date"
@@ -68,7 +76,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:broker,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:commission.option.description-option.description,component:"
 msgid "Component"
@@ -108,7 +116,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:commission.option.description-option.description,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:commission.rule,config_kind:"
 msgid "Conf. kind"
@@ -184,7 +192,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:commission.rule,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.billing.premium,com_lines:"
 msgid "Commission lines"
@@ -248,7 +256,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:contract.billing.premium-commission.option,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.option,com_options:"
 msgid "Commissions"
@@ -332,7 +340,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:contract.option-commission.option,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:distribution.network,all_com_plans:"
 msgid "Top Level Commission Plans"
@@ -400,7 +408,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:distribution.network-broker,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:distribution.network-commission.plan,com_plan:"
 msgid "Commission Plan"
@@ -440,7 +448,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:distribution.network-commission.plan,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:offered.option.description,commission_rules:"
 msgid "Commission Rules"
@@ -591,16 +599,16 @@ msgid "Commission"
 msgstr "Commission"
 
 msgctxt "selection:offered.option.description,subscription_behaviour:"
+msgid "Defaulted"
+msgstr "Proposée par Défaut"
+
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Mandatory"
 msgstr "Obligatoire"
 
 msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Optional"
 msgstr "En Option"
-
-msgctxt "selection:offered.option.description,subscription_behaviour:"
-msgid "Defaulted"
-msgstr "Proposée par Défaut"
 
 msgctxt "selection:offered.product,commission_kind:"
 msgid ""
