--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -1,6 +1,10 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "field:contract,change_loans_order:"
+msgid "Change Order"
+msgstr "Modifier l'ordre"
 
 msgctxt "field:contract,doc_received:"
 msgid "All Document Received"
@@ -18,6 +22,70 @@ msgctxt "field:contract,loans:"
 msgid "Loans"
 msgstr "Prêts"
 
+#, fuzzy
+msgctxt "field:contract,loans_ordered:"
+msgid "Loans"
+msgstr "Prêts"
+
+#, fuzzy
+msgctxt "field:contract-loan,contract:"
+msgid "Contract"
+msgstr "Gestionnaire de Contrats"
+
+#, fuzzy
+msgctxt "field:contract-loan,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+#, fuzzy
+msgctxt "field:contract-loan,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+#, fuzzy
+msgctxt "field:contract-loan,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+#, fuzzy
+msgctxt "field:contract-loan,id:"
+msgid "ID"
+msgstr "ID"
+
+#, fuzzy
+msgctxt "field:contract-loan,loan:"
+msgid "Loan"
+msgstr "Prêt"
+
+msgctxt "field:contract-loan,loan_number:"
+msgid "Loan Number"
+msgstr "Numéro de prêt"
+
+#, fuzzy
+msgctxt "field:contract-loan,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+#, fuzzy
+msgctxt "field:contract-loan,rec_name:"
+msgid "Name"
+msgstr "Valeur"
+
+#, fuzzy
+msgctxt "field:contract-loan,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+#, fuzzy
+msgctxt "field:contract-loan,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+#, fuzzy
+msgctxt "field:contract-loan,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:contract.covered_data,contract:"
 msgid "Contract"
 msgstr "Contrat"
@@ -34,6 +102,60 @@ msgctxt "field:contract.covered_data,person:"
 msgid "Person"
 msgstr "Personne Physique"
 
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,covered_data:"
+msgid "Covered Data"
+msgstr "Données de Couverture"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,id:"
+msgid "ID"
+msgstr "ID"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,loan_share:"
+msgid "Loan Share"
+msgstr "Quotité"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,rec_name:"
+msgid "Name"
+msgstr "Valeur"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+#, fuzzy
+msgctxt "field:contract.covered_data-loan.share,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:contract.covered_data.extra_premium,capital_per_mil_rate:"
+msgid "Rate on Capital"
+msgstr "Taux sur le Capital"
+
 msgctxt "field:contract.option,is_loan:"
 msgid "Is Loan"
 msgstr "Emprunteur"
@@ -45,6 +167,11 @@ msgstr "Montant"
 msgctxt "field:loan,contract:"
 msgid "Contract"
 msgstr "Contrat"
+
+#, fuzzy
+msgctxt "field:loan,contracts:"
+msgid "Contracts"
+msgstr "Contrats"
 
 msgctxt "field:loan,create_date:"
 msgid "Create Date"
@@ -81,6 +208,11 @@ msgstr "Durée du Différé"
 msgctxt "field:loan,early_payments:"
 msgid "Early Payments"
 msgstr "Remboursements Anticipés"
+
+#, fuzzy
+msgctxt "field:loan,end_date:"
+msgid "End Date"
+msgstr "Date de Fin"
 
 msgctxt "field:loan,first_payment_date:"
 msgid "First Payment Date"
@@ -150,9 +282,10 @@ msgctxt "field:loan,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+#, fuzzy
 msgctxt "field:loan,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:loan.create.amortization_table,id:"
 msgid "ID"
@@ -326,9 +459,10 @@ msgctxt "field:loan.increment,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+#, fuzzy
 msgctxt "field:loan.increment,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:loan.payment,amount:"
 msgid "Amount"
@@ -418,9 +552,15 @@ msgctxt "field:loan.payment,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+#, fuzzy
 msgctxt "field:loan.payment,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
+
+#, fuzzy
+msgctxt "field:loan.share,covered_data:"
+msgid "Covered Data"
+msgstr "Données de Couverture"
 
 msgctxt "field:loan.share,create_date:"
 msgid "Create Date"
@@ -450,6 +590,11 @@ msgctxt "field:loan.share,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
+#, fuzzy
+msgctxt "field:loan.share,option:"
+msgid "Contract Option"
+msgstr "Garantie Souscrite"
+
 msgctxt "field:loan.share,person:"
 msgid "Person"
 msgstr "Personne Physique"
@@ -474,9 +619,10 @@ msgctxt "field:loan.share,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+#, fuzzy
 msgctxt "field:loan.share,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:offered.option.description,is_loan:"
 msgid ""
@@ -485,6 +631,10 @@ msgstr " "
 msgctxt "field:offered.product,is_loan:"
 msgid ""
 msgstr " "
+
+msgctxt "model:contract-loan,name:"
+msgid "Contract Loan Relation"
+msgstr "Relation Prêt Contrat"
 
 msgctxt "model:contract.covered_data-loan.share,name:"
 msgid "Loan Covered Data Loan Share Relation"
@@ -523,8 +673,12 @@ msgid "Loan Share"
 msgstr "Quotité"
 
 msgctxt "model:tag,name:tag_loan"
-msgid "Loan"
+msgid "Prêt"
 msgstr "Prêt"
+
+msgctxt "selection:contract.covered_data.extra_premium,calculation_kind:"
+msgid "Per mil capital"
+msgstr "Pourmillage du capital"
 
 msgctxt "selection:loan,defferal:"
 msgid ""
